--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
     "@apollo/client": "^3.10.6",
+    "bootstrap": "^5.2.3",
     "graphql": "^16.9.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
