--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "wait-on": "7.2.0"
