--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "googlebooks-app",
+  "private": true,
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server/dist/server.js",
     "start:dev": "concurrently \"cd server && npm run watch\" \"wait-on tcp:3001 && cd client && npm run dev\"",
     "server": "cd server && npm start",
     "server:dev": "cd server && npm run dev",
@@ -20,9 +21,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.7",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "wait-on": "7.2.0"
   }
 }
