--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "watch": "nodemon dist/server.js",
-    "seed": "node dist/seed.js"
+    "seed": "node dist/seeds/seed.js"
   },
   "author": "",
   "license": "ISC",
