--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "Rachel Sutton",
   "license": "ISC",
   "dependencies": {
+    "apollo-link-error": "^1.1.13",
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.7",
