--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
     "wait-on": "7.2.0"
   }
 }
