--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "watch": "nodemon dist/server.js",
+    "watch": "nodemon ./dist/server.js",
     "seed": "node dist/seeds/seed.js"
   },
   "author": "",
