--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "author": "Rachel Sutton",
   "license": "ISC",
   "dependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "apollo-link-error": "^1.1.13",
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0"
+    "jwt-decode": "^4.0.0",
+    "vite": "^6.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
