--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,6 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.4",
-    "@types/jsonwebtoken": "^9.0.9",
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
@@ -22,7 +21,8 @@
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.5"
   }
